# cancer-prediction-lm840

./: .env  LICENSE  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-publish.yml
tests/: test_CancerModel.py
