[tool.poetry]
name = "cancer-prediction-lm840"
version = "0.1.0"
description = "model to predict cancerour tumours"
authors = ["Lauren Moon <113121065+Ren487@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cancer_prediction"}]

[tool.poetry.scripts]
cancer-prediction =  "cancer_prediction.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.1"
scikit-learn = "1.4.1.post1"
matplotlib = "3.8.3"
numpy = "1.26.4"
typer = "0.9.0"
streamlit = "^1.33.0"
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[tool.black]
line-length = 120
exclude = '''
/(
      .eggs         
    | .git          
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
